--- a/style.css
+++ b/style.css
@@ -94,3 +94,14 @@ p {
 .links:hover{
     background-color:chartreuse;
 }
+a {
+    text-decoration: none;
+    
+}
+.article:hover{
+    color = "cyan";
+} 
+html{
+    scroll-behavior: smooth
+        
+}
